--- a/k8s/manifests/deployment.yaml
+++ b/k8s/manifests/deployment.yaml
@@ -2,21 +2,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: go-web-app
+  name: my-web-app
   labels:
-    app: go-web-app
+    app: rishi-web-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: go-web-app
+      app: rishi-web-app
   template:
     metadata:
       labels:
-        app: go-web-app
+        app: rishi-web-app
     spec:
       containers:
-      - name: go-web-app
-        image: <docker-user-name>/go-web-app
+      - name: my-web-app
+        image: dockhrishabh/go-web-app
         ports:
         - containerPort: 8080
