--- a/k8s/manifests/ingress.yaml
+++ b/k8s/manifests/ingress.yaml
@@ -2,20 +2,20 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: go-web-app
+  name: my-web-app
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
   rules:
-  - host: go-web-app.local
+  - host: my-web-app.local
     http:
       paths: 
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: go-web-app
+            name: my-web-app
             port:
               number: 80
 
