--- a/k8s/manifests/service.yaml
+++ b/k8s/manifests/service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: go-web-app
+  name: my-web-app
   labels:
-    app: go-web-app
+    app: rishi-web-app
 spec:
   ports:
   - port: 80
     targetPort: 8080
     protocol: TCP
   selector:
-    app: go-web-app
+    app: rishi-web-app
   type: ClusterIP
